# AI-Car

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DepthChecker.cpp  DepthChecker.h  Detector.cpp  Detector.h  LaneDetection.pro  LaneDetection.pro.user.18  Makefile  Ojbect.h  ScreenObj.cpp  ScreenObj.h  Sign.cpp  Sign.h  backup.cpp  camera.cpp  camera.h  cmake_install.cmake  color.avi  config.cpp  config.h  config.txt  config.txt~  control.h  debug.cpp  detect.py  detector.cpp  detector.h  frameprocess.cpp  frameprocess.h  getparam.cpp  getparam.h  gitcommand.txt  imageprocess.cpp  imageprocess.h  lane.cpp  laneprocess.cpp  laneprocess.h  (+18 more)
2-Linux/OpenNI-Linux-Arm-2.3/: OpenNIDevEnvironment
2-Linux/OpenNI-Linux-Arm64-2.3/: orbbec-usb.rules
LIBSCAR/: CMakeCache.txt  Makefile  cmake_install.cmake
LIBSCAR/HAL/: Makefile  cmake_install.cmake
LIBSCAR/ObjectDetection/: Makefile  cmake_install.cmake
LIBSCAR/ObjectRecognition/: Makefile  cmake_install.cmake
LIBSCAR/extract_info/: Makefile  cmake_install.cmake
LIBSCAR/lane_detection/: Makefile  (+1 more)
LaneDetection/: LaneDetection.pro  config.cpp  frameprocess.cpp  imageprocess.cpp  laneprocess.h  main.cpp
LaneDetection-CPU/: LaneDetection.pro  LaneDetection.pro.user.18  config.cpp  config.h  frameprocess.h  getparam.h  lane.h  laneprocess.cpp  layer.cpp  layer.h  line.cpp  line.h  main.cpp  road.h
LaneDetection-GPU/: GPUTrafficSignDetector.pro  GPUTrafficSignDetector.pro.user.18  LaneDetection-GPU.pro  config.cpp  config.h  debug.cpp  debug.h  detector.cpp  detector.h  frameprocess.cpp  frameprocess.h  getparam.cpp  getparam.h  imageprocess.cpp  imageprocess.h  layer.cpp  layer.h  main.cpp  road.cpp  utils.cpp
TestGPU/: main.cpp
TestSVM/: TestSVM.pro  TestSVM.pro.user.18  getfiles.cpp  getfiles.h  main.cpp  svm.cpp  svm.h  train.h
build-LaneDetection-Desktop-Debug/: LaneDetection  Makefile
build-LaneDetection-Desktop-Release/: LaneDetection  Makefile
include/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.cpp  config.h  debug.cpp  debug.h  frameprocess.cpp  frameprocess.h  getparam.cpp  getparam.h  imageprocess.cpp  imageprocess.h  lane.cpp  lane.h  laneprocess.cpp  laneprocess.h  layer.cpp  line.cpp  lineprocess.cpp  lineprocess.h  main.cpp  pointsprocess.cpp  pointsprocess.h  road.cpp  road.h
lane/: LaneDetection.pro  LaneDetection.pro.user.18  config.cpp  config.h  frameprocess.cpp  getparam.cpp  laneprocess.cpp  main.cpp  pointsprocess.h  readcam.h
models/: all.xml  left.xml  right.xml  stop.xml
result/: stage0.xml  stage1.xml  stage10.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
traffic/: CMakeLists.txt~  Makefile  cmake_install.cmake  detectorsvm.cpp  detectorsvm.h
(+499 files in other folders)
